--- a/src/web/public/request-window.html
+++ b/src/web/public/request-window.html
@@ -12,7 +12,7 @@
     <meta name="apple-touch-fullscreen" content="yes" />
     <meta name="apple-mobile-web-app-title" content="ambire-mobile-wallet" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-    <title>Ambire Action Window</title>
+    <title>Ambire Request Window</title>
   </head>
   <body>
     <div id="root"></div>
