rewards update: codex with faq

--- a/src/legends/public/index.html
+++ b/src/legends/public/index.html
@@ -107,9 +107,9 @@
         "audience": { "@type": "Audience", "audienceType": "Ambire Wallet browser extension users" },
         "softwareHelp": {
           "@type": "CreativeWork",
-          "@id": "https://codex.ambire.com/#help",
-          "url": "https://codex.ambire.com/",
-          "name": "Ambire Rewards Guide"
+          "@id": "https://help.ambire.com/hc/en-us/sections/4422038113554",
+          "url": "https://help.ambire.com/hc/en-us/sections/4422038113554",
+          "name": "Ambire Rewards FAQ"
         },
         "aggregateRating": {
           "@type": "AggregateRating",
