rewards update: meta tags

--- a/src/legends/public/index.html
+++ b/src/legends/public/index.html
@@ -6,19 +6,19 @@
   <!-- -- Default -- -->
   <title>Ambire Rewards</title>
   <meta name="description"
-    content="Earn $WALLET tokens for your onchain activity with Ambire Rewards - Ambire Web3 Wallet’s rewards program. Join now!" />
+    content="Ambire Rewards fairly distributes $WALLET to Ambire Wallet users who support the ecosystem through staking, liquidity, governance, and Swap & Bridge usage." />
   <!-- -- OG -- -->
-  <meta property="og:title" content="Ambire Rewards | Turn Your Onchain Activity into $WALLET" />
+  <meta property="og:title" content="Ambire Rewards | The Fair Rewards Program for $WALLET" />
   <meta property="og:description"
-    content="Use Ambire Wallet and earn $WALLET tokens for swaps, bridges, and transactions across Ethereum & EVM chains." />
+    content="Ambire Rewards is the fair distribution mechanism for the $WALLET token, rewarding Ambire Wallet users who actively support the ecosystem." />
   <meta property="og:image" content="https://rewards.ambire.com/meta.png" />
   <meta property="og:image:alt" content="web3 wallet rewards program" />
   <meta property="og:url" content="https://rewards.ambire.com/" />
   <meta property="og:type" content="website" />
   <!-- -- Twitter -- -->
-  <meta name="twitter:title" content="Ambire Rewards | Earn $WALLET for Your Onchain Activity" />
+  <meta name="twitter:title" content="Ambire Rewards | The Fair $WALLET Distribution Program" />
   <meta name="twitter:description"
-    content="Ambire Rewards distributes $WALLET tokens to Ambire Wallet users for onchain actions like swaps, bridges, and transactions." />
+    content="The fair $WALLET token distribution program for Ambire Wallet users who stake, provide liquidity, participate in governance, and use Swap & Bridge." />
   <meta name="twitter:image" content="https://rewards.ambire.com/meta.png" />
   <meta name="twitter:image:alt" content="wallet rewards program" />
   <meta name="twitter:card" content="summary_large_image" />
