rewards fix: last 3 question answers in schema

--- a/src/legends/public/index.html
+++ b/src/legends/public/index.html
@@ -256,7 +256,7 @@
           "name": "Can I participate with multiple accounts?",
           "acceptedAnswer": {
             "@type": "Answer",
-            "text": "Yes, you can use more than one account. However, there is no incentive to split your balance across multiple accounts in this season. If any misuse or sybil-like behavior is detected, the Ambire team may take immediate action, including disqualifying accounts, adjusting score calculations, applying penalties, or other necessary measures. The team reserves the right to disqualify or penalize users for any reason."
+            "text": "Yes, you can use more than one account. However, there is no incentive to split your balance across multiple accounts in this season. That said, if any misuse or sybil-like behavior is detected, the Ambire team may take immediate action, including disqualifying accounts, adjusting score calculations, applying penalties, or other necessary measures. The team reserves the right to disqualify or penalize users for any reason."
           }
         },
         {
@@ -264,7 +264,7 @@
           "name": "How long is the current Ambire Reward season?",
           "acceptedAnswer": {
             "@type": "Answer",
-            "text": "Season 2 begins on December 15, 2025. It is planned to run for 90 days, depending on the community goal being reached. The goal is to generate $3MM in swap and bridge volume through the built-in Swap & Bridge features in the wallet. If the goal is not reached within the initial 90 days, the season will be extended following a governance vote."
+            "text": "Season 2 begins on December 15, 2025. It is planned to run for 90 days, but this depends on the community goal being reached. The goal is to generate $3MM in swap/bridge volume through the built-in Swap & Bridge features in the wallet during the season. If the goal is not reached within the initial 90 days, the season will be extended following a governance vote."
           }
         },
         {
@@ -272,7 +272,7 @@
           "name": "What are projected rewards?",
           "acceptedAnswer": {
             "@type": "Answer",
-            "text": "Projected rewards are an estimate of how much $WALLET you might earn based on your current score compared to all other participants. These values change throughout the season as scores update. Projections assume the community goal is reached. If the goal is not met, the season is extended. Reaching higher goal levels increases the total reward pool."
+            "text": "Projected rewards are an estimate of how much $WALLET you might earn based on your current score compared to all other participants. These values change throughout the season as scores update. Projections also assume that the community goal is reached. If the goal is not met, the season is extended. If higher goal levels are reached, the total reward pool increases."
           }
         }
       ]
